[package]
authors = [
	"Innolitics",
]
edition = "2018"
readme = "README.md"
name = "example-tm4c123-project"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

[dependencies.tm4c123x-hal]
version = "0.8.0"
features = ["rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "example-tm4c123-project"
test = false
bench = false
